feature/DSTEW-1225/normalise-whitespaces-in-bulk-submission-fields - replaced get(0) with getFirst()